turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:56: error: ')' expected but ';' found.
  setPos(8;33);
          ^Turmite:56: error: ';' expected but ')' found.
  setPos(8;33);
             ^